--- a/dashboard.html
+++ b/dashboard.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"> -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/style-dashboard.css">
@@ -8,7 +10,7 @@
 </head>
 <body>
 
-	
+
 
 	<div id="frame">
 		<a href="https://beginnerluft.de">
